# lightspeed

./: .env_example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/agent-eval/: Cargo.toml  README.md
crates/agent-eval/cases/: 02-write-file.json  05-grep-token.json  07-list-dir.json  08-fallback-log-report.json
crates/agent-eval/src/: main.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: api.rs  lib.rs  projection.rs
crates/agent-runtime/tests/: local_loop.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  constants.rs  environments.rs  handshake.rs  ids.rs  lib.rs  mcp.rs  model.rs  models.rs  notifications.rs  operator.rs  profiles.rs  prompts.rs  rpc.rs  runs.rs  schema_export.rs  service.rs  sessions.rs  skills.rs  storage.rs  tests.rs  views.rs
crates/api/tests/: schema_artifacts.rs
crates/auth-registry/: Cargo.toml  README.md
crates/auth-registry/src/: broker.rs  flow.rs  github.rs  grants.rs  lib.rs  locks.rs  mcp_oauth.rs  memory.rs  oauth.rs  providers.rs  secrets.rs
crates/auth-registry/testdata/: github_app_test_key.pem
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  auth_cli.rs  env_cli.rs  main.rs  mcp_cli.rs  profile_cli.rs  skills_cli.rs  vfs_cli.rs  vfs_transfer.rs
crates/cli/src/chat/: driver.rs  mod.rs  preview.rs  prompts.rs  protocol.rs  session.rs
crates/engine/: Cargo.toml  README.md
crates/engine/fixtures/: core_close_session_dynamic_command.json  core_lifecycle_closed_dynamic_event.json  core_lifecycle_closed_stored_event.json  core_tool_batch_completed_dynamic_entry.json  core_tool_batch_completed_dynamic_event.json  core_tool_batch_completed_stored_entry.json
crates/engine/src/: blob.rs  emission.rs  lib.rs
crates/engine/src/core/: admit.rs  apply.rs  codec.rs  domain.rs  drive.rs  io.rs  mod.rs  planning.rs  session_graph.rs  transition.rs  workflow.rs
crates/engine/src/session/: codec.rs  dynamic.rs  ids.rs  log.rs  mod.rs  replay.rs  stored.rs  workflow.rs
crates/engine/src/storage/: blobs.rs  mod.rs  session.rs
crates/eval/: Cargo.toml  README.md
crates/eval/cases/: 01-read-file.json  02-write-file.json  03-edit-file.json  04-apply-patch.json  05-grep-token.json  06-glob-configs.json  07-list-dir.json  08-fallback-log-report.json
crates/eval/src/: casefile.rs  main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  lib.rs  main.rs  service.rs
crates/gateway/tests/: temporal_live.rs
crates/host-bridge/: Cargo.toml
crates/host-bridge/src/: config.rs  filesystem.rs  gateway.rs  jobs.rs  lib.rs  main.rs  process.rs  rpc.rs  server.rs
crates/host-bridge/tests/: server.rs
crates/host-client/: Cargo.toml
crates/host-client/src/: control.rs  data.rs  error.rs  lib.rs  rpc.rs  transport.rs
crates/host-client/tests/: client.rs
crates/llm-runtime/: Cargo.toml
crates/llm-runtime/src/: anthropic_messages.rs  blob_io.rs  environment_prompts.rs  error.rs  executor.rs  lib.rs  openai_completions.rs  openai_responses.rs  params.rs  provider_keys.rs  result.rs  secrets.rs  skill_prompts.rs  testing.rs
crates/llm-runtime/tests/: anthropic_messages_compaction_live.rs  anthropic_messages_live.rs  anthropic_messages_mcp_live.rs  anthropic_messages_prompts_live.rs  anthropic_messages_skills_live.rs  openai_responses_compaction_live.rs  openai_responses_live.rs  openai_responses_mcp_live.rs  openai_responses_prompts_live.rs  openai_responses_skills_live.rs
crates/llm-runtime/tests/support/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/gateway/: http.rs  mod.rs  service.rs
crates/server/src/worker/: fake.rs  mod.rs  vfs_tools.rs
crates/server/tests/: fake_loop.rs  temporal_live.rs
crates/store-blob/: Cargo.toml
crates/store-blob/src/: lib.rs
crates/store-fs/: Cargo.toml
crates/store-fs/src/: blob.rs  lib.rs  session.rs  vfs.rs
crates/store-pg/: Cargo.toml
crates/store-pg/migrations/: 001_core.sql  001_initial.sql  002_mcp_registry.sql  002_vfs.sql  003_auth.sql  003_mcp.sql  004_auth.sql  004_oauth.sql  005_messaging.sql  006_environment_registry.sql  006_environments.sql  007_agent_profiles.sql  008_api_keys.sql
crates/store-pg/src/: api_keys.rs  auth.rs  blob.rs  blob_cache.rs  environment.rs  environment_jobs.rs  lib.rs  mcp.rs  messaging.rs  oauth.rs  object.rs  operator.rs  outbox.rs  profile.rs  providers.rs  session.rs  shared.rs  vfs.rs
crates/store-pg/tests/: api_keys_live.rs  session_lifecycle_live.rs  store_pg_live.rs
crates/temporal-server/: Cargo.toml
crates/temporal-server/src/: config.rs  credential_injection.rs  environment.rs  fleet.rs  lib.rs  main.rs  transcript.rs  universe.rs
crates/temporal-server/src/gateway/: http.rs  mod.rs  operator.rs  principal.rs
crates/temporal-server/src/worker/: fake.rs  mod.rs  reaper.rs  secrets.rs  session_tools.rs  vfs_tools.rs
crates/temporal-server/tests/: environment_provider_live.rs  fake_loop.rs  preprocess_live.rs  temporal_live.rs
crates/temporal-server/tests/support/: live.rs
crates/temporal-workflow/: Cargo.toml
crates/temporal-workflow/src/: activities.rs  config.rs  lib.rs  rehydrate.rs  temporal_helpers.rs  types.rs  workflow.rs
crates/temporal-workflow/src/workflow/: activity_calls.rs  admissions.rs  bootstrap.rs  clock.rs  drive.rs  errors.rs  fleet_waits.rs  job_waits.rs  mod.rs  promise_sources.rs  session_state.rs  tests.rs  wait_loop.rs
crates/temporal-workflow/src/workflows/: environment_job.rs  mod.rs
crates/tools/: Cargo.toml
crates/tools/src/: concurrency.rs  environment.rs  error.rs  lib.rs  limits.rs  targets.rs  toolset.rs  workflow_port.rs
crates/tools/src/builtin/: canonical.rs  claude.rs  codex.rs  mod.rs  shared.rs
crates/tools/src/environment/: jobs.rs  projection.rs
crates/tools/src/fleet/: mod.rs
crates/tools/src/fs/: access.rs  local.rs  memory.rs  mod.rs  read_only.rs  scoped.rs  scoped_local.rs  session.rs  vfs.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  fake.rs  lib.rs
crates/worker/tests/: fake_loop.rs
dev/: README.md  (+1 more)
(+525 files in other folders)
