[workspace]
members = [
    "crates/host-client",
    "crates/host-protocol",
    "crates/llm-clients",
    "crates/api",
    "crates/auth-registry",
    "crates/engine",
    "crates/mcp-registry",
    "crates/messaging",
    "crates/vfs",
    "crates/api-projection",
    "crates/temporal-workflow",
    "crates/temporal-server",
    "crates/test-support",
    "crates/llm-runtime",
    "crates/tools",
    "crates/store-fs",
    "crates/store-pg",
    "crates/eval",
    "crates/cli",
]
resolver = "2"
