[workspace]
members = [
    "crates/host-client",
    "crates/host-bridge",
    "crates/host-protocol",
    "crates/llm-clients",
    "crates/api",
    "crates/auth",
    "crates/environments",
    "crates/engine",
    "crates/mcp",
    "crates/profiles",
    "crates/messaging",
    "crates/vfs",
    "crates/api-projection",
    "crates/temporal-workflow",
    "crates/temporal-server",
    "crates/test-support",
    "crates/llm-runtime",
    "crates/tools",
    "crates/store-fs",
    "crates/store-pg",
    "crates/eval",
    "crates/cli",
]
resolver = "2"
