[package]
name = "agent-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
agent-core = { path = "../agent-core" }
agent-api = { path = "../agent-api" }
llm-runtime = { path = "../llm-runtime" }
agent-runtime = { path = "../agent-runtime" }
agent-tools = { path = "../agent-tools" }
llm-clients = { path = "../llm-clients" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[[bin]]
name = "agent-eval"
path = "src/main.rs"
