[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
agent-core = { path = "../agent-core" }
agent-api = { path = "../agent-api" }
serde_json = "1"

[dev-dependencies]
llm-runtime = { path = "../llm-runtime" }
agent-tools = { path = "../agent-tools" }
llm-clients = { path = "../llm-clients" }
tokio = { version = "1", features = ["macros", "rt"] }
