[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
jsonschema = { version = "0.33", default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
