[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
dotenvy = "0.15"
agent-core = { path = "../agent-core" }
agent-api = { path = "../agent-api" }
llm-runtime = { path = "../llm-runtime" }
agent-runtime = { path = "../agent-runtime" }
agent-tools = { path = "../agent-tools" }
llm-clients = { path = "../llm-clients" }
store-fs = { path = "../store-fs" }
futures-util = "0.3"
pulldown-cmark = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync", "time"] }
ratatui = "0.29"
unicode-width = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[[bin]]
name = "forge"
path = "src/main.rs"
