[package]
name = "eval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
engine = { path = "../engine" }
api = { path = "../api" }
api-projection = { path = "../api-projection" }
llm-runtime = { path = "../llm-runtime" }
test-support = { path = "../test-support" }
tools = { path = "../tools" }
llm-clients = { path = "../llm-clients" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[[bin]]
name = "eval"
path = "src/main.rs"
