[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
workflow = { path = "../workflow" }
api = { path = "../api" }
api-projection = { path = "../api-projection" }
engine = { path = "../engine" }
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
serde_json = "1"
store-pg = { path = "../store-pg" }
temporalio-client = "0.4.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
worker = { path = "../worker" }
temporalio-common = "0.4.0"
temporalio-sdk = "0.4.0"
temporalio-sdk-core = "0.4.0"
dotenvy = "0.15"
