[package]
name = "host-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
api = { path = "../api" }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
host-protocol = { path = "../host-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }

[dev-dependencies]
host-client = { path = "../host-client" }
tempfile = "3"

[[bin]]
name = "host-bridge"
path = "src/main.rs"
