[package]
name = "host-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
host-protocol = { path = "../host-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["net"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
