[package]
name = "llm-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
engine = { path = "../engine" }
llm-clients = { path = "../llm-clients" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tools = { path = "../tools" }

[dev-dependencies]
test-support = { path = "../test-support" }
tokio = { version = "1", features = ["macros", "rt"] }
vfs = { path = "../vfs" }
