[package]
name = "store-blob"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = "0.1"
object_store = "0.13.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
