[package]
name = "store-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
