[package]
name = "store-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
vfs = { path = "../vfs" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
