[package]
name = "store-pg"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
async-trait = "0.1"
object_store = "0.13.1"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "json"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
vfs = { path = "../vfs" }

[dev-dependencies]
object_store = { version = "0.13.1", features = ["aws"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
