[package]
name = "store-pg"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
api = { path = "../api" }
auth = { path = "../auth" }
base64 = "0.22"
engine = { path = "../engine" }
environments = { path = "../environments" }
host-protocol = { path = "../host-protocol" }
async-trait = "0.1"
mcp = { path = "../mcp" }
messaging = { path = "../messaging" }
object_store = { version = "0.13.1", features = ["aws"] }
profiles = { path = "../profiles" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "json"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
vfs = { path = "../vfs" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
