[package]
name = "temporal-server"
version = "0.1.0"
edition = "2024"

[dependencies]
temporal-workflow = { path = "../temporal-workflow" }
api = { path = "../api" }
api-projection = { path = "../api-projection" }
engine = { path = "../engine" }
environments = { path = "../environments" }
host-client = { path = "../host-client" }
host-protocol = { path = "../host-protocol" }
vfs = { path = "../vfs" }
anyhow = "1"
async-trait = "0.1"
auth = { path = "../auth" }
axum = "0.7"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
llm-clients = { path = "../llm-clients" }
llm-runtime = { path = "../llm-runtime" }
mcp = { path = "../mcp" }
messaging = { path = "../messaging" }
object_store = "0.13.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid"] }
profiles = { path = "../profiles" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
store-pg = { path = "../store-pg" }
temporalio-common = "0.4.0"
temporalio-client = "0.4.0"
temporalio-macros = "0.4.0"
temporalio-sdk = "0.4.0"
temporalio-sdk-core = "0.4.0"
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tools = { path = "../tools" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
test-support = { path = "../test-support" }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[[bin]]
name = "server"
path = "src/main.rs"
