[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
engine = { path = "../engine" }
glob = "0.3"
host-client = { path = "../host-client" }
host-protocol = { path = "../host-protocol" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
