[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
workflow = { path = "../workflow" }
engine = { path = "../engine" }
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
llm-clients = { path = "../llm-clients" }
llm-runtime = { path = "../llm-runtime" }
serde_json = "1"
store-pg = { path = "../store-pg" }
temporalio-common = "0.4.0"
temporalio-macros = "0.4.0"
temporalio-sdk = "0.4.0"
temporalio-sdk-core = "0.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
test-support = { path = "../test-support" }

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
